--- a/CICD-Agent-Backend/package.json
+++ b/CICD-Agent-Backend/package.json
@@ -1,8 +1,11 @@
 {
   "name": "cicd-agent-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
+    "dev": "ts-node-dev --respawn src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -10,6 +13,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@langchain/community": "^0.3.43",
+    "@langchain/core": "^0.3.56",
+    "@langchain/langgraph": "^0.2.72",
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0"
