--- a/CICD-Agent-Frontend/package.json
+++ b/CICD-Agent-Frontend/package.json
@@ -13,10 +13,12 @@
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@supabase/supabase-js": "^2.49.8",
     "@tailwindcss/vite": "^4.1.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cobe": "^0.6.3",
+    "dotenv": "^16.5.0",
     "lucide-react": "^0.510.0",
     "motion": "^12.12.1",
     "next-themes": "^0.4.6",
