--- a/CICD-Agent-Backend/package.json
+++ b/CICD-Agent-Backend/package.json
@@ -17,12 +17,16 @@
     "@langchain/core": "^0.3.56",
     "@langchain/langgraph": "^0.2.72",
     "axios": "^1.9.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
     "@types/node": "^22.15.20",
+    "@types/node-fetch": "^2.6.12",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   }
