--- a/CICD-Agent-Backend/package.json
+++ b/CICD-Agent-Backend/package.json
@@ -16,6 +16,7 @@
     "@langchain/community": "^0.3.43",
     "@langchain/core": "^0.3.56",
     "@langchain/langgraph": "^0.2.72",
+    "@langchain/mcp-adapters": "^0.5.2",
     "axios": "^1.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
