--- a/GitLab-MCP-Server/package.json
+++ b/GitLab-MCP-Server/package.json
@@ -21,10 +21,14 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "1.0.1",
     "@types/node-fetch": "^2.6.12",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "node-fetch": "^3.3.2",
     "zod-to-json-schema": "^3.23.5"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.18",
+    "@types/express": "^5.0.2",
     "shx": "^0.3.4",
     "typescript": "^5.6.2"
   }
