--- a/GitLab-MCP-Server/package.json
+++ b/GitLab-MCP-Server/package.json
@@ -19,7 +19,7 @@
     "watch": "tsc --watch"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "1.0.1",
+    "@modelcontextprotocol/sdk": "^1.12.1",
     "@types/node-fetch": "^2.6.12",
     "cors": "^2.8.5",
     "express": "^5.1.0",
